--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Mac.Morning
 tagline: 'Mac.Morning Sun'
 description: 'A Jekyll theme adapted from <a href="http://lanyon.getpoole.com/" target="_blank">Lanyon</a>. Made by <a href="http://codinfox.github.io" target="_blank">@codinfox</a>.'
 baseurl: ""
-url: https://SeeArtSun.github.io/blog/
+url: https://SeeArtSun.github.io/
 logo: '/public/favicon.png'
 
 # Site configurations
@@ -29,7 +29,7 @@ author:
   gravatar: 43f821bc4492be18ad78285a0f569831 # md5 hash of your email address
   contact:
     #linkedin:  https://www.linkedin.com/in/lizhihao
-    github:    https://github.com/SeeArtSun
+    github:    https://github.com/SeeArtSun/
     # brunch:    https://brunch.co.kr/@sundream
     # facebook:  <hide>
     # twitter:   https://twitter.com/Li_Zhihao
