--- a/_config.yml
+++ b/_config.yml
@@ -42,16 +42,16 @@ nav:
   #   - '/'
   Blog:
     - '/blog/'
-    - { Categories: '/blog/categories/' }
-    - { Tags: '/blog/tags/' }
+    #- { Categories: '/blog/categories/' }
+    #- { Tags: '/blog/tags/' }
   # About:
   #   - '/about/'
   Github Project:
     - 'http://SeeArtSun.github.io/'
 
 # Where are tags and categories displayed
-tag_page: '/blog/tags/'
-category_page: '/blog/categories/'
+#tag_page: '/blog/tags/'
+#category_page: '/blog/categories/'
 
 hero:
   image: /public/img/we_will_be_giants_by_yalestewart.jpg
